<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/busRealtimeFragment"
        android:icon="@drawable/ic_bus"
        android:title="@string/bus" />
    <item
        android:id="@+id/subwayRealtimeFragment"
        android:icon="@drawable/ic_subway"
        android:title="@string/subway" />
    <item
        android:id="@+id/cafeteriaFragment"
        android:icon="@drawable/ic_cafeteria"
        android:title="@string/cafeteria" />
    <item
        android:id="@+id/menuFragment"
        android:icon="@drawable/ic_campus"
        android:title="@string/tabbar_campus" />
</menu>
