...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingBottom="16dp">
    <LinearLayout
        android:id="@+id/setting_campus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
...
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/app_separator"/>
    <LinearLayout
        android:id="@+id/setting_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
...
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/app_separator"/>
    <LinearLayout
        android:id="@+id/setting_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
...
