...
        android:orientation="vertical">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/hanyang_blue">
            <com.google.android.material.search.SearchBar
                android:id="@+id/search_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/background"
                android:hint="@string/contact_search_guide" />
        </com.google.android.material.appbar.AppBarLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/contact_list_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="true"
                android:paddingHorizontal="20dp"
                android:paddingVertical="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
...
